# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  fly.toml  justfile  render.yaml
.config/: nextest.toml
.do/: deploy.template.yaml
.github/workflows/: ci.yml  coverage.yml  docker.yml  release.yml
apps/macos/: CHANGELOG.md  CLAUDE.md  project.yml
apps/macos/Sources/: AppSettings.swift  ChatModels.swift  ChatStore.swift  ConfigurationPane.swift  ContentView.swift  FormComponents.swift  HttpdPane.swift  LogStore.swift  LogsPane.swift  MessageBubbleView.swift  MoltisApp.swift  MoltisClient.swift  MoltisEditorField.swift  OnboardingView.swift  ProviderCardView.swift  ProviderConfigForm.swift  ProviderStore.swift  SettingsItemViews.swift  SettingsModels.swift  SettingsSectionContent.swift  SettingsView.swift
crates/agents/: Cargo.toml
crates/agents/src/: model.rs  prompt.rs  provider_chain.rs  runner.rs  silent_turn.rs
crates/agents/src/providers/: anthropic.rs  genai_provider.rs  github_copilot.rs  kimi_code.rs  mod.rs  openai.rs  openai_codex.rs  openai_compat.rs
crates/agents/src/providers/local_gguf/: mod.rs  models.rs  system_info.rs
crates/agents/src/providers/local_llm/: backend.rs  models.rs
crates/auto-reply/src/: reply.rs
crates/channels/src/: plugin.rs
crates/chat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: db_commands.rs  main.rs
crates/config/src/: lib.rs  loader.rs  schema.rs  template.rs  validate.rs
crates/cron/src/: service.rs
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 20260225120000_consolidate_theme.sql
crates/plugins/: Cargo.toml
crates/providers/: Cargo.toml
crates/skills/: Cargo.toml
crates/swift-bridge/: Cargo.toml  cbindgen.toml
crates/swift-bridge/src/: lib.rs
crates/tools/: Cargo.toml
crates/web/: Cargo.toml
crates/web/src/: lib.rs  (+3 more)
docs/src/: SUMMARY.md  authentication.md  browser-automation.md  caldav.md  comparison.md  configuration.md  macos-app-ffi-bridge.md  memory.md  security.md
plans/: 2026-02-17-system-prompt-profiles-and-section-toggles.md  windows-moltis-winui-ffi-plan.md
scripts/: build-swift-bridge.sh  local-validate-pr.sh  local-validate.sh
(+119 files in other folders)
