[package]
name = "moltis-swift-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[features]
default = ["metrics", "tracing"]
metrics = ["dep:metrics"]
tracing = ["dep:tracing"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
metrics = { workspace = true, optional = true }
moltis-agents = { workspace = true }
moltis-config = { workspace = true }
moltis-gateway = { workspace = true, default-features = true, features = ["web-ui", "metrics", "file-watcher", "voice"] }
moltis-projects = { workspace = true }
moltis-provider-setup = { workspace = true }
moltis-providers = { workspace = true }
moltis-sessions = { workspace = true }
sqlx = { workspace = true }
moltis-web = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }
